updated sidebar background properties

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         <div id="navbar-section">
                 <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
                 <ul class="d-flex nav flex-column">
-                    <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon">About Me</a></li>
+                    <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon">About Me</a></li>
                     <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
                     <li class="nav-li"><a href="#project-anchor">Projects</a></li>
                 </ul>
@@ -175,7 +175,7 @@
 
 <script src=".gitignore/keys.js"></script>
 <script src="jquery.js"></script>
-<script src="webpage-js.js.js"></script>
+<script src="webpage-js.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
