testing positioning for main content

--- a/projects.html
+++ b/projects.html
@@ -30,9 +30,9 @@
         </div>
     </div>
 
-    <!--    Test Project Carousel-->
+    <!--    Large Project Carousel-->
 
-    <div id="carouselExampleCaptions" class="carousel slide d-inline-flex justify-content-end" data-ride="carousel" data-touch="true">
+    <div id="carouselExampleCaptions-large" class="carousel slide d-inline-flex justify-content-end" data-ride="carousel" data-touch="true">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
