adjusting anchor tags for layout

--- a/projects.html
+++ b/projects.html
@@ -15,9 +15,9 @@
 <!--    Large and XL website -->
 <main id="main-container-large-projects" class="d-none d-lg-block d-xl-none d-xl-block">
 
-
+<div id="flex-div" class="d-flex">
     <!--    Side Navbar - XL and L only-->
-
+    <div id="left-block">
     <div id="sidebar" class="d-none d-xl-block d-lg-block d-xl-none">
         <div id="navbar-section">
             <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
@@ -25,13 +25,15 @@
                     <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon">About Me</a></li>
                     <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
                     <li class="nav-li"><a href="#project-anchor">Projects</a></li>
+                    <li class="nav-li"><a href="#tag-test">Tag test</a></li>
                 </ul>
             </nav>
         </div>
     </div>
+    </div>
 
     <!--    Large Project Carousel-->
-
+    <div id="middle-block">
     <div id="carouselExampleCaptions-large" class="carousel slide d-inline-flex justify-content-end" data-ride="carousel" data-touch="true">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -84,6 +86,15 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+        <div id="scroll-test"><a href="#tag-test">
+            <h1>Hello again World</h1>
+        </a>
+        </div>
+    </div>
+
+</div>
+
+
 
 
 </main>
