updating about me to be before projects

--- a/index.html
+++ b/index.html
@@ -160,10 +160,9 @@
                     <div id="navbar-section">
                         <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
                             <ul class="d-flex nav flex-column">
-                                <li class="nav-li" id="icon-li"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon">About Me</a></li>
-                                <li class="nav-li"><a href="#connect-anchor">Connect</a></li>
-                                <li class="nav-li"><a href="#project-anchor">Projects</a></li>
-                                <li class="nav-li"><a href="#tag-test">Tag test</a></li>
+                                <li class="nav-li" id="icon-li"><a href="#about-me-anchor-large"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon">About Me</a></li>
+                                <li class="nav-li"><a href="#connect-anchor-large">Connect</a></li>
+                                <li class="nav-li"><a href="#project-anchor-large">Projects</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -224,8 +223,46 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
-                <div id="tag-test">
-                    <h1>Hello again World</h1>
+
+<!--                About Me Large-->
+                <div id="about-me-anchor-large">
+                    <div id="about-me-large">
+                        <h2 class="text-center">About Me</h2>
+<!--                        <div id="icon-photo-large" class="d-flex justify-content-center mb-3">-->
+<!--                            <img src="img/moriah-icon.jpg" alt="icon" id="icon-large">-->
+<!--                        </div>-->
+                        <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
+                            <br>
+                            <br>
+                            I am currently attending a 20 week career accelerator program at <a href="https://codeup.com/" target="_blank">Codeup Dallas.</a> I am seeking full time employment as a Software Engineer beginning in July 2020.
+                            <br>
+                            <br>
+                            I am an avid knowledge collector, seeking to expand the ways humans adapt to and interface with the machines in their world.
+                            <br>
+                            <br>
+                            I am passionate about mechanical and software solutions that improve safety and quality of life for all. I believe in equitable access to the technology and training needed to assist workers with new skills as automation and software technology evolves.
+                            <br>
+                            <br>
+                        <h2 class="text-center">Technical skills</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>BootStrap</li>
+                            <li>JavaScript</li>
+                            <li>jQuery</li>
+                            <li>Object-Oriented Programming</li>
+                            <li>Java SE</li>
+                            <li>Java EE (Servlets, JSP)</li>
+                            <li>Spring Boot Framework</li>
+                            <li>MySQL</li>
+                            <li>Thymeleaf</li>
+                            <li>Test-Driven Development</li>
+                            <li>Paired Programming</li>
+                            <li>VCS with Git</li>
+                        </ul>
+                        </p>
+                    </div>
+
                 </div>
             </div>
 
