updated middle block container to contain about me and projects

--- a/index.html
+++ b/index.html
@@ -150,6 +150,29 @@
     </div>
 </main>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!--    Large and XL website -->
     <main id="main-container-large-projects" class="d-none d-lg-block d-xl-none d-xl-block">
 
@@ -170,6 +193,7 @@
             </div>
 
             <!--                About Me Large-->
+            <div id="middle-block">
             <div id="about-me-anchor-large">
                 <div id="about-me-large">
                     <h2 class="text-center">About Me</h2>
@@ -211,7 +235,8 @@
             </div>
 
             <!--    Large Project Carousel-->
-            <div id="middle-block">
+            <div id="project-anchor-large">
+            <div id=projects-large">
                 <div id="carouselExampleCaptions-large" class="carousel slide d-inline-flex justify-content-end" data-ride="carousel" data-touch="true">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -269,8 +294,8 @@
             </div>
 
         </div>
-
-
+        </div>
+        </div>
 </main>
 
 
