added connect section and anchor

--- a/index.html
+++ b/index.html
@@ -78,9 +78,6 @@
             <br>
             <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
         </ul>
-        <p>
-
-        </p>
     </div>
 
 
@@ -292,10 +289,26 @@
 
 
             </div>
+                <!--            Connect Large-->
+                <div id="connect-large">
+                <div id="connect-anchor-large" class="container-fluid">
+                    <h2 class="text-center">Connect</h2>
+                    <ul>
+                        <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
+                        <br>
+                        <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>
+                        <br>
+                        <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
+                    </ul>
+                </div>
+                </div>
 
         </div>
+
         </div>
+
         </div>
+
 </main>
 
 
