added name to landing page

--- a/index.html
+++ b/index.html
@@ -188,9 +188,16 @@
                     </div>
                 </div>
             </div>
+            <div id="middle-block">
+<!--            Landing Page-->
+            <div id="landing-page" class="d-flex justify-content-start align-items-center">
+                <div id="name" class="text-center">
+                <h1>Moriah Humphries</h1>
+                </div>
+            </div>
 
             <!--                About Me Large-->
-            <div id="middle-block">
+
             <div id="about-me-anchor-large">
                 <div id="about-me-large">
                     <h2 class="text-center">About Me</h2>
