--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Moriah Humphries</title>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Monoton&family=Neuton:wght@400;800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="webpage-style.css">
@@ -61,7 +62,6 @@
             <li>Paired Programming</li>
             <li>VCS with Git</li>
         </ul>
-        </p>
     </div>
 
     <!--Connect section-->
@@ -180,9 +180,9 @@
                     <div id="navbar-section">
                         <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
                             <ul class="d-flex nav flex-column">
-                                <li class="nav-li" id="icon-li"><a href="#about-me-anchor-large"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon">About Me</a></li>
-                                <li class="nav-li"><a href="#project-anchor-large">Projects</a></li>
-                                <li class="nav-li"><a href="#connect-anchor-large">Connect</a></li>
+                                <li class="nav-li text-center" id="icon-li"><a href="#about-me-anchor-large"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon" class="mt-3">About Me</a></li>
+                                <li class="nav-li text-center"><a href="#project-anchor-large">Projects</a></li>
+                                <li class="nav-li text-center"><a href="#connect-anchor-large">Connect</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -193,8 +193,14 @@
             <div id="landing-page" class="d-flex justify-content-start align-items-center">
                 <div id="name" class="text-center">
                 <h1>Moriah Humphries</h1>
+                    <h3 id="tag-line">Software Developer</h3>
                 </div>
+<!--                <div id="tag-line">-->
+<!--                    <h3>Software Developer</h3>-->
+<!--                </div>-->
+
             </div>
+
 
             <!--                About Me Large-->
 
