moved connect section to bottom of mobile version, updated heading fonts

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <nav id="navbar-small">
             <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
                 <li class="nav-li-small" id="icon-li-mobile"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon-mobile" class="icon-small mr-1">About Me</a></li>
-                <li class="nav-li-small"><a href="#connect-anchor">Connect</a></li>
                 <li class="nav-li-small"><a href="#project-anchor">Projects</a></li>
+                <li class="nav-li-small"><a href="#connect-anchor">Connect</a></li>
             </ul>
         </nav>
     </div>
@@ -29,7 +29,7 @@
 
     </div>
     <div id="about-me">
-        <h2 class="text-center">About Me</h2>
+        <h2 class="text-center" id="about-me-small">About Me</h2>
         <div id="icon-photo" class="d-flex justify-content-center mb-3">
             <img src="img/moriah-icon.jpg" alt="icon" id="icon">
         </div>
@@ -45,7 +45,7 @@
             I am passionate about mechanical and software solutions that improve safety and quality of life for all. I believe in equitable access to the technology and training needed to assist workers with new skills as automation and software technology evolves.
             <br>
             <br>
-        <h2 class="text-center">Technical skills</h2>
+        <h2 class="text-center" id="technical-skills-small">Technical skills</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
@@ -64,22 +64,6 @@
         </ul>
     </div>
 
-    <!--Connect section-->
-
-    <div id="connect-anchor">
-
-    </div>
-    <div id="connect" class="container-fluid">
-        <h2 class="text-center">Connect</h2>
-        <ul>
-            <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
-            <br>
-            <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>
-            <br>
-            <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
-        </ul>
-    </div>
-
 
     <!--Projects section-->
     <div id="project-anchor">
@@ -87,10 +71,10 @@
     </div>
 
     <div id="main-project">
-        <h2 class="text-center">Projects</h2>
+        <h2 class="text-center" id="projects-small">Projects</h2>
 
 
-<!--    Test Project Carousel-->
+<!--    Small Project Carousel-->
 
     <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-touch="true">
         <ol class="carousel-indicators">
@@ -143,6 +127,23 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
+    </div>
+
+
+    <!--Connect section-->
+
+    <div id="connect-anchor">
+
+    </div>
+    <div id="connect" class="container-fluid">
+        <h2 class="text-center" id="connect-small">Connect</h2>
+        <ul>
+            <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
+            <br>
+            <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>
+            <br>
+            <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
+        </ul>
     </div>
     </div>
 </main>
