updated main text font

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Moriah Humphries</title>
-    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Monoton&family=Neuton:wght@400;800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Lato&family=Monoton&family=Neuton:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="webpage-style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -135,7 +134,7 @@
     <div id="connect-anchor">
 
     </div>
-    <div id="connect" class="container-fluid">
+    <div id="connect">
         <h2 class="text-center" id="connect-small">Connect</h2>
         <ul>
             <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
