updated text in navbar and font size

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div id="navbar-section">
                         <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
                             <ul class="d-flex nav flex-column">
-                                <li class="nav-li text-center" id="icon-li"><a href="#about-me-anchor-large"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon" class="mt-3">About Me</a></li>
+                                <li class="nav-li text-center" id="icon-li"><a href="#about-me-anchor-large"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon" class="mt-3">About</a></li>
                                 <li class="nav-li text-center"><a href="#project-anchor-large">Projects</a></li>
                                 <li class="nav-li text-center"><a href="#connect-anchor-large">Connect</a></li>
                             </ul>
