--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
             </div>
                 <!--            Connect Large-->
                 <div id="connect-large">
-                <div id="connect-anchor-large" class="container-fluid">
-                    <h2 class="text-center">Connect</h2>
-                    <ul>
+                <div id="connect-anchor-large">
+                    <h2 class="text-center mb-5">Connect</h2>
+                    <ul class="d-flex align-items-center flex-column" id="contact-list">
                         <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
                         <br>
                         <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>
