updated alignment on contact section

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <div id="connect-large">
                 <div id="connect-anchor-large">
                     <h2 class="text-center mb-5">Connect</h2>
-                    <ul class="d-flex align-items-center flex-column" id="contact-list">
+                    <ul class="d-flex align-items-center flex-column text-center" id="contact-list">
                         <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
                         <br>
                         <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>
