--- a/index.html
+++ b/index.html
@@ -225,9 +225,9 @@
             <div id=projects-large">
                 <div id="carouselExampleCaptions-large" class="carousel slide" data-ride="carousel" data-touch="true">
                     <ol class="carousel-indicators">
-                        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-                        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleCaptions-large" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleCaptions-large" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleCaptions-large" data-slide-to="2"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-interval="5000">
@@ -265,15 +265,15 @@
 <!--                                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
 <!--                            </div>-->
                         </div>
+                        <a class="carousel-control-prev" href="#carouselExampleCaptions-large" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleCaptions-large" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
-                    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
                 </div>
 
 
