--- a/index.html
+++ b/index.html
@@ -230,40 +230,43 @@
                         <li data-target="#carouselExampleCaptions-large" data-slide-to="2"></li>
                     </ol>
                     <div class="carousel-inner">
+
+<!--                        Slide 1-->
                         <div class="carousel-item active" data-interval="5000">
+                            <div>
+                                <h5>Open Weather Map</h5>
+                                <p class="outside-link">
+                                    An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
+                                    <br>
+                                    The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.
+                                    <br>
+                                    The user can also drag and drop the pin to update the weather for the pin's location.
+                                </p>
+                            </div>
                             <img src="img/weatherimage.png" id="weather-img-car-large" class="d-block w-100" alt="weather project image">
-<!--                            <div class="carousel-caption d-none d-md-block">-->
-                                <!--            Slide 1-->
-<!--                                <h5>Open Weather Map</h5>-->
-<!--                                <p class="outside-link">-->
-<!--                                    An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>-->
-<!--                                    <br>-->
-<!--                                    The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.-->
-<!--                                    <br>-->
-<!--                                    The user can also drag and drop the pin to update the weather for the pin's location.-->
-<!--                                </p>-->
-<!--                            </div>-->
                         </div>
+
                         <!--            Slide 2-->
                         <div class="carousel-item" data-interval="5000" id="weather-image-large">
+                                                        <div>
+                                                            <h5>Coffee Project</h5>
+                                                            <p>
+                                                                Created with a partner during a pair programming exercise in Codeup's Javascript module.
+                                                                <br>
+                                                                This application allows for the user to select their desired roast of coffee, and search by name within the roast category.
+                                                            </p>
+                                                        </div>
                             <img src="img/coffeeimage.png" id="coffee-img-car-large" class="d-block w-100" alt="coffee project image">
-<!--                            <div class="carousel-caption d-none d-md-block">-->
-<!--                                <h5>Coffee Project</h5>-->
-<!--                                <p>-->
-<!--                                    Created with a partner during a pair programming exercise in Codeup's Javascript module.-->
-<!--                                    <br>-->
-<!--                                    This application allows for the user to select their desired roast of coffee, and search by name within the roast category.-->
-<!--                                </p>-->
-<!--                            </div>-->
                         </div>
+
+<!--                        Slide 3-->
                         <div class="carousel-item" data-interval="5000">
+                                                        <div>
+                                                            <h5>Third slide label</h5>
+                                                            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                                        </div>
                             <img src="img/coffeeimage.png" id="coffee-img-car2-large" class="d-block w-100" alt="coffee project image">
-<!--                            <div class="carousel-caption d-none d-md-block">-->
 
-
-<!--                                <h5>Third slide label</h5>-->
-<!--                                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>-->
-<!--                            </div>-->
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleCaptions-large" role="button" data-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
