--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
                     <div id="navbar-section">
                         <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
                             <ul class="d-flex nav flex-column">
-                                <li class="nav-li text-center" id="icon-li"><a href="#about-me-anchor-large"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon" class="mt-3">About</a></li>
-                                <li class="nav-li text-center"><a href="#project-anchor-large">Projects</a></li>
-                                <li class="nav-li text-center"><a href="#connect-anchor-large">Connect</a></li>
+                                <li class="nav-li text-center" id="icon-li"><a href="#about-me-page"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon" class="mt-3">About</a></li>
+                                <li class="nav-li text-center"><a href="#project-page">Projects</a></li>
+                                <li class="nav-li text-center"><a href="#connect-page">Connect</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -180,7 +180,7 @@
 
             <!--                About Me Large-->
 
-            <div id="about-me-anchor-large">
+            <div id="about-me-page">
                 <div id="about-me-large">
                     <h2 class="text-center">About Me</h2>
                     <!--                        <div id="icon-photo-large" class="d-flex justify-content-center mb-3">-->
@@ -221,7 +221,7 @@
             </div>
 
             <!--    Large Project Carousel-->
-            <div id="project-anchor-large">
+            <div id="project-page">
             <div id=projects-large">
                 <div id="carouselExampleCaptions-large" class="carousel slide" data-ride="carousel" data-touch="true">
                     <ol class="carousel-indicators">
@@ -283,7 +283,7 @@
             </div>
                 <!--            Connect Large-->
                 <div id="connect-large">
-                <div id="connect-anchor-large">
+                <div id="connect-page">
                     <h2 class="text-center mb-5">Connect</h2>
                     <ul class="d-flex align-items-center flex-column text-center" id="contact-list">
                         <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
