added profile photo to about me page

--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
             <div id="about-me-page">
                 <div id="about-me-large">
                     <h2 class="text-center">About Me</h2>
-                    <!--                        <div id="icon-photo-large" class="d-flex justify-content-center mb-3">-->
-                    <!--                            <img src="img/moriah-icon.jpg" alt="icon" id="icon-large">-->
-                    <!--                        </div>-->
+                                            <div id="profile-photo" class="d-flex justify-content-center mb-3">
+                                                <img src="img/profile-photo.png" alt="photo" id="about-photo">
+                                            </div>
                     <p>Hello, my name is Moriah Humphries and I am a Dallas-Fort Worth based Software Engineer.
                         <br>
                         <br>
