moved technical skills to separate page

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                         <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
                             <ul class="d-flex nav flex-column">
                                 <li class="nav-li text-center" id="icon-li"><a href="#about-me-page"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon" class="mt-3">About</a></li>
+                                <li class="nav-li text-center"><a href="#skills-page">Skills</a></li>
                                 <li class="nav-li text-center"><a href="#project-page">Projects</a></li>
                                 <li class="nav-li text-center"><a href="#connect-page">Connect</a></li>
                             </ul>
@@ -196,25 +197,6 @@
                         <br>
                         <br>
                         I am passionate about mechanical and software solutions that improve safety and quality of life for all. I believe in equitable access to the technology and training needed to assist workers with new skills as automation and software technology evolves.
-                        <br>
-                        <br>
-                    <h2 class="text-center">Technical skills</h2>
-                    <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>BootStrap</li>
-                        <li>JavaScript</li>
-                        <li>jQuery</li>
-                        <li>Object-Oriented Programming</li>
-                        <li>Java SE</li>
-                        <li>Java EE (Servlets, JSP)</li>
-                        <li>Spring Boot Framework</li>
-                        <li>MySQL</li>
-                        <li>Thymeleaf</li>
-                        <li>Test-Driven Development</li>
-                        <li>Paired Programming</li>
-                        <li>VCS with Git</li>
-                    </ul>
                     </p>
                 </div>
 
@@ -281,6 +263,29 @@
 
 
             </div>
+
+<!--                Skills Large-->
+                <div id="skills-large">
+                    <div id="skills-page">
+                        <h2 class="text-center">Technical skills</h2>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>BootStrap</li>
+                            <li>JavaScript</li>
+                            <li>jQuery</li>
+                            <li>Object-Oriented Programming</li>
+                            <li>Java SE</li>
+                            <li>Java EE (Servlets, JSP)</li>
+                            <li>Spring Boot Framework</li>
+                            <li>MySQL</li>
+                            <li>Thymeleaf</li>
+                            <li>Test-Driven Development</li>
+                            <li>Paired Programming</li>
+                            <li>VCS with Git</li>
+                        </ul>
+                    </div>
+                </div>
                 <!--            Connect Large-->
                 <div id="connect-large">
                 <div id="connect-page">
@@ -296,9 +301,7 @@
                 </div>
 
         </div>
-
         </div>
-
         </div>
 
 </main>
