added separate section for technical skills, updated anchor and styling

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav id="navbar-small">
             <ul class="d-flex nav flex-nowrap justify-content-around align-self-center">
                 <li class="nav-li-small" id="icon-li-mobile"><a href="#about-me-anchor"><img src="img/moriah-icon.jpg" alt="icon" id="small-icon-mobile" class="icon-small mr-1">About Me</a></li>
+                <li class="nav-li-small"><a href="#technical-skills-anchor">Skills</a></li>
                 <li class="nav-li-small"><a href="#project-anchor">Projects</a></li>
                 <li class="nav-li-small"><a href="#connect-anchor">Connect</a></li>
             </ul>
@@ -42,9 +43,17 @@
             <br>
             <br>
             I am passionate about mechanical and software solutions that improve safety and quality of life for all. I believe in equitable access to the technology and training needed to assist workers with new skills as automation and software technology evolves.
-            <br>
-            <br>
-        <h2 class="text-center" id="technical-skills-small">Technical skills</h2>
+        </p>
+    </div>
+
+<!--    Technical Skills Small-->
+
+        <div id="technical-skills-anchor">
+
+    </div>
+        <div id="technical-skills">
+
+        <h2 class="text-center" id="technical-skills-small">Skills</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
@@ -62,7 +71,7 @@
             <li>VCS with Git</li>
         </ul>
     </div>
-
+    </div>
 
     <!--Projects section-->
     <div id="project-anchor">
