--- a/index.html
+++ b/index.html
@@ -80,70 +80,38 @@
 
     <div id="main-project">
         <h2 class="text-center" id="projects-small">Projects</h2>
-        <!--Non-carousel projects-->
 
-        <!--    Weather Project-->
 
-                <div id="weather-project">
-                    <h5 id="weather-header">Weather Project</h5>
-                    <br>
-                    <p class="outside-link">
-                        An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>
-                        <br>
-                        <br>
-                        The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.
-                        <br>
-                        <br>
-                        The user can also drag and drop the pin to update the weather for the pin's location.
-                    </p>
-                    <img src="img/weatherimage.png" alt="weather project image" id="weather-img">
-                </div>
+<!--    Small Project Carousel-->
 
-                <!--    Coffee Project-->
-
-                <div id="coffee-project">
-                    <h5 id="coffee-header">Coffee Project</h5>
-
-                    <p>
-                        Created with a partner during a pair programming exercise in Codeup's Javascript module.
-                        <br>
-                        <br>
-
-                        This application allows for the user to select their desired roast of coffee, and search by name within the roast category.
-                    </p>
-                    <img src="img/coffeeimage.png" alt="coffee project image" id="coffee-img">
-                </div>
-
-<!--&lt;!&ndash;    Small Project Carousel&ndash;&gt;-->
-
-<!--    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-touch="true">-->
-<!--        <ol class="carousel-indicators">-->
-<!--            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>-->
-<!--            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>-->
-<!--            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>-->
-<!--        </ol>-->
-<!--        <div class="carousel-inner">-->
-<!--            <div class="carousel-item active" data-interval="5000">-->
-<!--                <img src="img/weatherimage.png" id="weather-img-car" class="d-block w-100" alt="weather project image">-->
-<!--            </div>-->
-<!--&lt;!&ndash;            Slide 2&ndash;&gt;-->
-<!--            <div class="carousel-item" data-interval="5000" id="weather-image">-->
-<!--                <img src="img/coffeeimage.png" id="coffee-img-car" class="d-block w-100" alt="coffee project image">-->
-<!--            </div>-->
-<!--            <div class="carousel-item" data-interval="5000">-->
-<!--                <img src="img/coffeeimage.png" id="coffee-img-car2" class="d-block w-100" alt="coffee project image">-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">-->
-<!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-<!--            <span class="sr-only">Previous</span>-->
-<!--        </a>-->
-<!--        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">-->
-<!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-<!--            <span class="sr-only">Next</span>-->
-<!--        </a>-->
-<!--    </div>-->
-<!--    </div>-->
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-touch="true">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active" data-interval="5000">
+                <img src="img/weatherimage.png" id="weather-img-car" class="d-block w-100" alt="weather project image">
+            </div>
+<!--            Slide 2-->
+            <div class="carousel-item" data-interval="5000" id="weather-image">
+                <img src="img/coffeeimage.png" id="coffee-img-car" class="d-block w-100" alt="coffee project image">
+            </div>
+            <div class="carousel-item" data-interval="5000">
+                <img src="img/coffeeimage.png" id="coffee-img-car2" class="d-block w-100" alt="coffee project image">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    </div>
 
 
     <!--Connect section-->
@@ -355,5 +323,39 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!--&lt;!&ndash;Non-carousel projects&ndash;&gt;-->
+
+<!--&lt;!&ndash;    Weather Project&ndash;&gt;-->
+
+<!--<div id="weather-project">-->
+<!--    <h5 id="weather-header">Weather Project</h5>-->
+<!--    <br>-->
+<!--    <p class="outside-link">-->
+<!--        An application created during Codeup's Javascript and Jquery modules. This utilizes two APIs: <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a href="https://openweathermap.org/" target="_blank">OpenWeatherMap.</a>-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        The user can search using the input box, and the map will adjust to display the new city and create a pin on the user's searched location. The weather will dynamically update for each search.-->
+<!--        <br>-->
+<!--        <br>-->
+<!--        The user can also drag and drop the pin to update the weather for the pin's location.-->
+<!--    </p>-->
+<!--    <img src="img/weatherimage.png" alt="weather project image" id="weather-img">-->
+<!--</div>-->
+
+<!--&lt;!&ndash;    Coffee Project&ndash;&gt;-->
+
+<!--<div id="coffee-project">-->
+<!--    <h5 id="coffee-header">Coffee Project</h5>-->
+
+<!--    <p>-->
+<!--        Created with a partner during a pair programming exercise in Codeup's Javascript module.-->
+<!--        <br>-->
+<!--        <br>-->
+
+<!--        This application allows for the user to select their desired roast of coffee, and search by name within the roast category.-->
+<!--    </p>-->
+<!--    <img src="img/coffeeimage.png" alt="coffee project image" id="coffee-img">-->
+<!--</div>-->
 
 
