updated view swidth on main section

--- a/index.html
+++ b/index.html
@@ -295,15 +295,15 @@
             </div>
 
                 <!--            Connect Large-->
-                <div id="connect-large">
                 <div id="connect-page">
-                    <h2 class="text-center mb-5">Connect</h2>
+                <div id="connect-large">
+                    <h2 class="text-center">Connect</h2>
                     <ul class="d-flex align-items-center flex-column text-center" id="contact-list">
                         <li class="outside-link"><a href="https://github.com/moriahhumphries" target="_blank" class="contact-link">Github</a></li>
                         <br>
                         <li class="outside-link"><a href="https://www.linkedin.com/in/moriah-humphries-126621b3/" target="_blank" class="contact-link">LinkedIn</a></li>
                         <br>
-                        <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
+                        <li class="outside-link"><a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
                     </ul>
                 </div>
                 </div>
