updated main section alignments

--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
             </div>
 
                 <!--                Skills Large-->
+                <div id="skills-page">
                 <div id="skills-large">
-                    <div id="skills-page">
                         <h2 class="text-center">Technical skills</h2>
                         <ul>
                             <li>HTML</li>
@@ -292,6 +292,7 @@
                         </a>
                     </div>
                 </div>
+            </div>
             </div>
 
                 <!--            Connect Large-->
