--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@
             <li>VCS with Git</li>
         </ul>
     </div>
-    </div>
 
     <!--Projects section-->
     <div id="project-anchor">
@@ -129,7 +128,6 @@
             <li class="outside-link">Email me @ <a href="mailto:moriah.humphries@gmail.com?Subject=Let's%20connect!" target="_top" class="contact-link">moriah.humphries@gmail.com</a></li>
         </ul>
     </div>
-    </div>
 </main>
 
 
@@ -165,7 +163,8 @@
                     <div id="navbar-section">
                         <nav id="navbar" class="d-none d-xl-block d-lg-block d-xl-none">
                             <ul class="d-flex nav flex-column">
-                                <li class="nav-li text-center" id="icon-li"><a href="#about-me-page"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon" class="mt-3">About</a></li>
+                                <li class="nav li text-center d-flex justify-content-center"><a href="http://moriahhumphries.github.io"><img src="img/moriah-icon.jpg" alt="icon" id="sidebar-icon" class="mt-3"></a></li>
+                                <li class="nav-li text-center" id="icon-li"><a href="#about-me-page">About</a></li>
                                 <li class="nav-li text-center"><a href="#skills-page">Skills</a></li>
                                 <li class="nav-li text-center"><a href="#project-page">Projects</a></li>
                                 <li class="nav-li text-center"><a href="#connect-page">Connect</a></li>
@@ -181,12 +180,7 @@
                 <h1>Moriah Humphries</h1>
                     <h3 id="tag-line">Software Developer</h3>
                 </div>
-<!--                <div id="tag-line">-->
-<!--                    <h3>Software Developer</h3>-->
-<!--                </div>-->
-
             </div>
-
 
             <!--                About Me Large-->
 
@@ -308,10 +302,8 @@
                     </ul>
                 </div>
                 </div>
-
         </div>
         </div>
-      <div id="right"
 
 </main>
 
